[project]
name = "opensees"
version = "0.0.28"
authors = [
  {name="Claudio M. Perez"}
  # <50180406+claudioperez@users.noreply.github.com>"
]

license = {file = "project/LICENSE"}

readme = "README.md"

description = "Idiomatic and idempotent bindings to the OpenSees framework."

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only"
]

keywords = [
    "seismic",
    "earthquake",
] 

dependencies = [
    "numpy < 1.20.0; python_version<'3.8'",
    "numpy ; python_version>='3.8'",
    # "scipy < 1.6.0 ; python_version=='3.6'",
    # "scipy < 1.8   ; python_version=='3.7'",
    # "scipy > 1.6.0 ; python_version>'3.7'",
    "pyyaml",

# Plotting
    "matplotlib",
    "panel",

# Full-featured REPL
    "pyparsing",
    "prompt_toolkit",
    "pygments"
]

[project.optional-dependencies]
testing = [
    "pytest >= 4.6",
    "pytest-checkdocs >= 2.4",
    "pytest-flake8",
    "nbmake"
]

repl = [
    "prompt_toolkit",
    "pygments"
]

docs = [
    "elstir",
    "mkdocs-material"
]

[project.urls]
Repository = "http://github.com/BRACE2/OpenSeesRT"
Documentation = "https://brace2.github.io/OpenSeesRT"

[build-system]
requires = [
    "amoeba-build >= 0.0.12",
    "pybind11",
    "setuptools >= 52.0.2",
]

build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["libg3*"]

