[metadata]
name = opensees
version = 0.0.20
author = Claudio M. Perez
author_email = claudio_perez@berkeley.edu
description = opensees
long_description = file: README.md
long_description_content_type = text/markdown
url = https://brace2.github.io/OpenSeesRT
license_files =
    LICENSE

classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

keywords = 
    seismic
    earthquake
    parser
 
[options]
package_dir = 
    = src
packages = find:
include_package_data = true
python_requires = >=3.6
install_requires =
    scikit-build
    numpy < 1.20.0; python_version<'3.8'
    numpy ; python_version>='3.8'
    scipy < 1.6.0 ; python_version=='3.6'
    scipy < 1.8   ; python_version=='3.7'
    scipy > 1.6.0 ; python_version>'3.7'
    pyyaml

[options.packages.find]
where = src
exclude =
    build*
    dist*
    docs*
    tests*
    site*

[options.extras_require]
testing =
    # upstream
    pytest >= 4.6
    pytest-checkdocs >= 2.4
    pytest-flake8
    pytest-black >= 0.3.7; python_implementation != "PyPy" and python_version < "3.10"
    pytest-cov
    # python_version: workaround for python/typed_ast#156
    pytest-mypy; python_implementation != "PyPy" and python_version < "3.10"
    pytest-enabler >= 1.0.1
    pandas
    # local

docs =
    # upstream
    elstir
    jaraco.packaging >= 8.2
    rst.linker >= 1.9

plots = 
    matplotlib
    # local

#[options.entry_points]
#console_scripts =
#    sees = sees.__main__:main

[flake8]
max-line-length = 88
extend-ignore = 
   E251
   E252 # whitespace around parameter equals
   E128 # Continuation underindented for visual indent
   E731 # assignment of lambda expression
select = B,C,E,F,W,T4,B9

#[tool:pytest]

